<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_save">Sauvegarder</string>
    <string name="action_shareproject">Partager le projet</string>
    <string name="action_deleteproject">Supprimer le projet</string>
    <string name="action_woulddelete">Voulez-vous vraiment supprimer ce projet ?</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_newproject">Nouveau Projet</string>
    <string name="action_newresource">Nouvelle Ressource</string>
    <string name="action_newtask">Nouvelle Tâche</string>
    <string name="action_search">Rechercher</string>
    <string name="action_export">Exporter les projets</string>
    <string name="action_about">A Propos…</string>
    <string name="action_rate">Noter cette application</string>
    <string name="action_share">Partager</string>
    <string name="projectname">Nom du Projet</string>
    <string name="projectdescription">Présentation</string>
    <string name="fillfield">"Veuillez remplir ce champs"</string>
    <string name="clients">Clients</string>
    <string name="users">Utilisateurs</string>
    <string name="task">Tâche</string>
    <string name="resource">Ressource</string>
    <string name="currentproject">Projet(s) en cours…</string>
    <string name="noproject">Il n\'y à pas de projet.</string>
    <string name="noresource">Il n\'y à pas de ressource.</string>
    <string name="notask">Il n\'y à pas de tâche.</string>
    <string name="taskname">Nom de la tâche</string>
    <string name="lateproject">Autres projets</string>
    <string name="cancel">Annuler</string>
    <string name="valid">Valider</string>
    <string name="action_more">More</string>
    <string name="importcontact">Mes contacts</string>
    <string name="firstlastname">Nom et Prénom</string>
    <string name="title_activity_smart_pro">SmartPro</string>
    <string name="title_section1">Projets</string>
    <string name="title_section2">Ressources</string>
    <string name="title_section3">Tâches</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main">Main</string>
    <string name="active">Actif</string>
    <string name="inactive">Inactif</string>
    <string name="client">Client</string>

    <string-array name="job">
        <item name="owner">Chef de projet</item>
        <item name="contributor">Contributeur</item>
        <item name="user">Utilisateur</item>
        <item name="customer">Client</item>
    </string-array>

    <string name="title_activity_resource">Ressources</string>
    <string name="title_activity_project">Projets</string>
    <string name="title_activity_calendar">Calendrier</string>
    <string name="title_activity_about">A Propos de SmartPro&#8230;</string>
    <string name="about_description">Cette application vous permet de gérer vos projets suivant vos ressources.\n\nPour commencer il vous suffit de créer un nouveau projet et de choisir quelle ressources s\'y appliquent.</string>
    <string name="action_addresource">Ajouter une ressource</string>
    <string name="taskended">Tâche fini</string>
    <string name="people">%2$d Personnes</string>
    <string name="action_editproject">Modifier le projet</string>

</resources>
