<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trackcell.smartpro.Project">

    <item android:id="@+id/action_shareproject"
          android:title="@string/action_shareproject"
          android:icon="@drawable/ic_action_share"
          android:showAsAction="always" />

    <item android:id="@+id/action_save"
          android:title="@string/action_save"
          android:icon="@drawable/ic_action_save"
          android:onClick="Save"
          android:showAsAction="always" />

    <item android:id="@+id/action_edit"
          android:title="@string/action_editproject"
          android:showAsAction="never" />

    <item android:id="@+id/action_delete"
          android:title="@string/action_deleteproject"
          android:onClick="Delete"
          android:showAsAction="never" />

</menu>