<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/green"
        android:text="@string/resource"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <EditText
        android:id="@+id/model_resource_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstlastname"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:inputType="textCapWords|textNoSuggestions"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/model_resource_description"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:hint="@string/projectdescription"
        android:inputType="textCapSentences"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:id="@+id/model_resource_projects"/>

</LinearLayout>