<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/green"
        android:text="@string/action_newresource"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <EditText
        android:id="@+id/model_newresource_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstlastname"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="12dp"
        android:inputType="textCapWords|textNoSuggestions"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/model_newresource_description"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:hint="@string/projectdescription"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/model_newresource_job"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:entries="@array/job"
        android:layout_marginBottom="12dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="12dp"
        android:id="@+id/model_newresource_type"
        android:visibility="gone" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ajouter comme utilisateur"
            android:id="@+id/model_newresource_type_1"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ajouter comme client"
            android:id="@+id/model_newresource_type_2"
            />
    </RadioGroup>

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Utilisateur / Client"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:id="@+id/switch1"
        android:checked="false"
        android:visibility="gone"/>

</LinearLayout>